Fixed spacing on services

--- a/css/review.css
+++ b/css/review.css
@@ -19,5 +19,5 @@
 }
 .review__item{
 	align-items: center;
-	justify-content: center:
+	justify-content: center;
 }
